tidy up. disable invisible buttons. add replay when you lose. bugfix could spin a piece through the ground

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 body, html {
     font: 1em/1.4 droid sans;
-    background:#e4e4e4;
+    background:#fff;
     height:100%;
     min-height:100%;
     margin:0;
@@ -15,22 +15,22 @@ body, html {
      position: fixed;
      top: 50%;
      left: 50%;
-     margin-top: -320px;
-     margin-left: -200px;
+     margin-top: -350px;
+     margin-left: -210px;
 
 
 }
-#score {margin-top: -300px;}
+#score {margin-left: 0px; text-align: right; width: 210px;}
 
 #myCanvas {
-     border: black 0px solid !important;
+     border: black 10px solid !important;
      position: fixed;
      top: 50%;
      left: 50%;
-     margin-top: -320px;
-     margin-left: -200px;
+     margin-top: -330px;
+     margin-left: -210px;
      box-shadow: 0px 0px 4px rgba(0,0,0,.1);
-     border-radius: 5px;
+     border-radius: 0px;
      transition: all 1s ease;
 }
 
@@ -90,7 +90,27 @@ height: 500px;
      margin-top: 330px;
      margin-left: -600px;}
 
-input { opacity: 0 !important; }
+input { opacity: 0 !important; pointer-events: none;}
+
+#replay {height: 100px; width: 200px; 
+     position: fixed;
+     top: 50%;
+     left: 50%;
+     margin-top: -50px;
+     margin-left: -100px;
+     pointer-events: none;}
+
+.gg #replay {opacity: 1 !important; z-index: 9001; pointer-events: auto;
+}
+
+@keyframes pulse {
+25% {box-shadow: 0px 0px 4px rgba(0,0,0,.1);}
+50% {box-shadow: 0px 0px 0px 6px 2px rgba(80,80,80,.26);}
+85% {box-shadow: 0px 0px 13px 4px rgba(50,50,50,.22); transform: scale(1.01);}
+100% {box-shadow: 0px 0px 24px 8px rgba(90,90,90,.12); transform: scale(1);}}
+
+
+#replay:hover {background:#1e90ff; animation: .6s pulse .6s linear infinite;}
 
 
 
